# ai_ui_recorder

./: .gitignore  README.md  idea.md  idea1.md  langgpt_standard.md  package-lock.json  package.json  pyproject.toml  todo.md  todo1.md  todo2.md  todo3.md  todo4.md
config/: ai.local.example.json  ai.local.json
doc/: README.md  case_execution_unified_spec.md  check.md  check1.md  check2.md  design.md  interaction_record.md  patent_disclosure.md  python_translate_design.md  recording_data_spec.md  requirements.md  run_directory_layout.md  snapshot_timing_design.md  tcs900_TCS900自定义变量组态.yaml  todo.txt  todo_list.md  translate_design.md  translate_platform_design.md  user_manual.md
record_translate/: ai-ui-translate.spec  build.py  pyproject.toml
record_translate/record_translate/: __init__.py  __main__.py  adapter.py  client.py  config.py  models.py  validate.py  workflow.py  xml_parse.py
record_translate/record_translate/phases/: phase1.py  phase2.py  phase4.py
record_translate/record_translate/preprocess/: __init__.py  classify.py  context.py  diff.py  form_state.py  noise.py
record_translate/record_translate/prompts/: agent_txt.py  case_generation.py  loader.py  step_structured.py
recorder/: .gitignore  package-lock.json  package.json
recorder_translate_server/: README.md  ai-ui-translate.spec  build.py  idea_by_deepseek-v4-pro.md  idea_by_gemini.md  idea_by_minimax-m3.md
scripts/: build-electron-recorder.ps1  build-translate-standalone.ps1  build-trial.ps1  run-translate-on-meta.mjs
web_ui_template/: test_record_TPT系统PID整定功能测试_20260602_141053.json  (+1 more)
(+333 files in other folders)
