[project]
name = "recorder-translate-server"
version = "0.95.0"
description = "AI UI Recorder 翻译模块 + Web 服务"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx",
]

[project.scripts]
recorder-translate-server = "recorder_translate_server.server.__main__:main"
record-translate = "recorder_translate_server.backend.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["recorder_translate_server*"]
