[project]
name = "record-translate"
version = "0.93.0"
description = "AI UI Recorder 翻译模块（Python 版）"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx",
]

[project.scripts]
record-translate = "record_translate.__main__:main"
